--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,102 @@
+* {
+    box-sizing: border-box;
+}
+
 html, body {
     margin: 0;
     padding: 0;
     overflow: hidden;
+    transition: opacity 500ms, background-color 200ms;
+    background-color: antiquewhite;
     height: 100%;
     width: 100%;
 }
-  
+
+.hidden {
+    opacity: 0;
+}
+
+#pointer {
+    background-color: #222;
+    border-radius: 50%;
+    position: absolute;
+    pointer-events: none;
+    z-index: 10;
+    transition: all 100ms;
+}
+
+.page {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    width: 100%;
+}
+
+.content {
+    display: flex;
+    flex-grow: 1;
+    justify-content: center;
+    align-items: center;
+}
+
+.about-sketch h2 {
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.circle-button {
+    background: transparent;
+    border: 2px solid #222;
+    border-radius: 50%;
+    width: 200px;
+    height: 200px;
+    outline: none;
+    transition: all 100ms;
+    position: relative;
+    cursor: inherit;
+}
+
+.circle-button:active div {
+    border: 15px solid #222;
+}
+
+.circle-button div {
+    position: absolute;
+    top: -2px;
+    left: -2px;
+    right: -2px;
+    bottom: -2px;
+    background: transparent;
+    border: 2px solid #222;
+    border-radius: 50%;
+    outline: none;
+    transition: all 100ms, border 500ms;
+}
+
+.circle-button span {
+    font-size: 20px;
+}
+
+.sketch-menu {
+    display: flex;
+    justify-content: center;
+    padding-bottom: 20px;
+}
+
+.sketch-link {
+    display: block;
+    background-color: transparent;
+    border: 2px solid #222;
+    border-radius: 50%;
+    width: 25px;
+    height: 25px;
+    margin: 0 5px;
+}
+
+.sketch-link:hover {
+    background-color: #222;
+}
+
+.sketch-link.active {
+    background-color: #222;
+}
